# ScratchPad

./: README.md
CppSmartPointers/: CMakeLists.txt
CppSmartPointers/include/: Foo.hpp
CppSmartPointers/src/: Foo.cpp  main.cpp
CppWorkings/: CMakeLists.txt  README.md
CppWorkings/include/: CharChain.hpp  rand_int_dist.hpp  utils.hpp
CppWorkings/src/: CharChain.cpp  main.cpp  rand_int_dist.cpp  utils.cpp
DesignPatterns/: CMakeLists.txt  README.md
DesignPatterns/include/: delegate.hpp
DesignPatterns/src/: delegate.cpp  main.cpp
ErlangBook/: .gitignore  README.md
ErlangBook/src/basics/: basics.erl
GoWorkings/: .gitignore  README.md
GoWorkings/src/: main.go
OlaBillParse/: .gitignore  README.md  pom.xml
OlaBillParse/src/main/java/com/diskodev/: App.java  Cli.java  Constants.java  ExcelInvoiceCreator.java  ModelFactory.java  OlaInvoice.java  OlaInvoiceExtractor.java  PDFDetailsExtractor.java  PDFTextExtractor.java  Utils.java
OlaBillParse/src/main/java/com/model/: Credentials.java  Expense.java  InputSettings.java  Report.java  RequestJobDescription.java
OlaBillParse/src/test/java/com/diskodev/: AppTest.java
ParallelMOOC/: README.md
ParallelMOOC/Cpp/Workings/: .gitignore  CMakeLists.txt  README.md
ParallelMOOC/Cpp/Workings/include/: parallels.hpp
ParallelMOOC/Cpp/Workings/src/: main.cpp  parallels.cpp
ParallelMOOC/Cpp/Workings/test/src/: parallels_tests.cpp  ws_tests.cpp
ParallelMOOC/Java/: .gitignore  README.md
ParallelMOOC/Java/Workings/: pom.xml
ParallelMOOC/Java/Workings/src/main/java/edu/coursera/parallel/: App.java  ConcurrentPrograms.java  HelloRunnable.java  HelloThread.java  Parallels.java  RecAddAction.java  RecMaxTask.java  StreamTest.java
ParallelMOOC/Java/Workings/src/test/java/edu/coursera/parallel/: AppTest.java  ParallelsTest.java
PythonClassDevToolkit/: README.md  pcdt.py
PythonWorkings/: README.md  mem_profile.py
RxMicroServices/: README.md
RxMicroServices/Workings/: pom.xml
RxMicroServices/Workings/src/main/java/com/rx/microservices/: App.java
RxMicroServices/Workings/src/test/java/com/rx/microservices/: AppTest.java
